:beers: Bug Squashed/cleaning up styling
Found the issues with the second section and got it coded

--- a/revitalize/pages/Landing/LandingPage.scss
+++ b/revitalize/pages/Landing/LandingPage.scss
@@ -1,175 +1,186 @@
 .header {
-    .cta-container {
-        display: flex;
-        justify-content: space-around;
-        margin: 3rem 0;
-        img {
-            max-width: 31%;
-            scale: both;
-        }
-        .cta {
-            max-width: 32%;
-            max-height: 33%;
-            text-align:left;
-            .cta-title {
-                color: #4840BA;
-                height: auto;
-            }
-            p {
-                margin: 2% auto;
-            }
-            div {
-                margin: 8% 0;
-                background: #4840BA;
-                padding: 1rem 2rem;
-                border-radius: 0.25rem;
-                color: white;
-                border: none;
-                width: 11rem;
-            }
-        } 
+  .cta-container {
+    display: flex;
+    justify-content: space-around;
+    margin: 3rem 0;
+    img {
+      max-width: 31%;
+      scale: both;
     }
-    .values {
-        p {
-            text-align: center;
-            font-size: 1.5rem;
-        }
-        .value-tiles {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            width: 75%;
-            margin: 0 auto;
-            padding-bottom: 5rem;
-            padding-top: 1.25rem;
-            div {
-                padding: 1rem 2rem;
-                border-radius: 0.25rem;
-                color: white;
-                width: 6rem;
-                text-align: center;
-            }
-            .tenacity {
-                background: #D2405B;
-            }
-            .ingenuity {
-                background: #FFC100;
-            }
-            .growth {
-                background: #82C7B3;
-            }
-            .diligence {
-                background: #53A1A9;
-            }
-            .resilience {
-                background: #AB7B61;
-            }
-            .compassion {
-                background: #F7AD82;
-            }
-        }
+    .cta {
+      max-width: 32%;
+      max-height: 33%;
+      text-align: left;
+      .cta-title {
+        color: #4840ba;
+        height: auto;
+      }
+      p {
+        margin: 2% auto;
+      }
+      div {
+        margin: 8% 0;
+        background: #4840ba;
+        padding: 1rem 2rem;
+        border-radius: 0.25rem;
+        color: white;
+        border: none;
+        width: 11rem;
+      }
     }
-  
-    .applicaton-links-container {
-        max-width: 100%;
-        display: flex;
-        justify-content: center;
-        .img-container{
-            display: flex;
-            width: 34%;
-    
-            text-align: center;
-            img{
-                width:100%;
-            }
-        }
-        div {
-            display: flex;
-            justify-content: center;
-            p {
-                color: white;
-                position: absolute;
-                align-self: center;
-                font-weight: 1.4;
-                font-size: 2.1rem;
-            }
-            .donate-text {
-                color: black;
-            }
-
-        }
-        .donor {
-
-        }
-        .students {
-            
-        }
-        .employers {
-            
-        }
-        .img-container {
-            
-        }
+  }
+  .values {
+    p {
+      text-align: center;
+      font-size: 1.5rem;
     }
-    
-}
-.our-purpose {
-    width: 100%;
+    .value-tiles {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 75%;
+      margin: 0 auto;
+      padding-bottom: 5rem;
+      padding-top: 1.25rem;
+      div {
+        padding: 1rem 2rem;
+        border-radius: 0.25rem;
+        color: white;
+        width: 6rem;
+        text-align: center;
+      }
+      .tenacity {
+        background: #d2405b;
+      }
+      .ingenuity {
+        background: #ffc100;
+      }
+      .growth {
+        background: #82c7b3;
+      }
+      .diligence {
+        background: #53a1a9;
+      }
+      .resilience {
+        background: #ab7b61;
+      }
+      .compassion {
+        background: #f7ad82;
+      }
+    }
+  }
 
-    position: absolute;
-    z-index: 2;
-    margin-top: 120px;
-    margin-bottom: 120px;
-   img{
-       width: 100%;
-       position: absolute;
-   }
-   .background-content{
-       position: relative;
-       z-index:1;
-       margin: 0 auto;
-       
-        width: 70%;
-        margin-top: -5%;
-        padding-top: 25%;
-        padding-bottom: 20%;
-       background-color: blue;
-       height: 10vh;
-       .floated-tuition-cta{
+  .applicaton-links-container {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    .img-container {
+      display: flex;
+      width: 34%;
+
+      text-align: center;
+      img {
+        width: 100%;
+      }
+    }
+    div {
+      display: flex;
+      justify-content: center;
+      p {
+        color: white;
         position: absolute;
-        top: 12%;
+        align-self: center;
+        font-weight: 1.4;
+        font-size: 2.1rem;
+      }
+      .donate-text {
+        color: black;
+      }
+    }
+    .donor {
+    }
+    .students {
+    }
+    .employers {
+    }
+    .img-container {
+    }
+  }
+}
+
+.our-purpose-wrapper {
+  height: 800px;
+//   background-color: black;
+  width: 100%;
+  z-index: 2;
+  display: grid;
+  margin: 120px auto;
+  padding: auto 0;
+  .our-purpose {
+      height: 85%;
+      vertical-align: middle;
+      align-self: center;
+      
+    .our-purpose-cta {
+      z-index: 1;
+      margin: -3% auto auto auto;
+      height:760px;
+      width: 70%;
+      
+background: linear-gradient(125.97deg, #2041B6 -4.44%, #3366E9 131.53%);
+box-shadow: 0px 0px 10px rgba(40, 95, 215, 0.25);
+      position: relative;
+
+      .floated-tuition-cta {
+        position: absolute;
+        height:520px;
+        top:11%;
         left: -5%;
-        height: 60%;
+        // height: 60%;
         background-color: white;
         width: 43%;
-       
+
         padding: 20px;
-        .title{
-            font-weight: 500;
-            font-size: 32px;
-            margin-bottom: 10px;
-            line-height: 15px;
-            .highlighted-text{
-                
-            }
+        .title {
+          font-weight: 500;
+          font-size: 32px;
+          margin-bottom: 10px;
+          line-height: 15px;
+          .highlighted-text {
+          }
         }
-        p{
-            font-size: 16px;
-            line-height: 35px;
+        p {
+          font-size: 16px;
+          line-height: 35px;
         }
-        img{
-            position: relative;
-            scale: both;
-            width: 42%;
+        img {
+          position: absolute;
+          bottom: -11%;
+          right:4%;
+          width: 42%;
+          
         }
+      }
+      .our-purpose-content {
+      }
     }
-   }
-   
+  }
 }
 
-.on-the-job-training{
-    img{
-        width: 100px;
-        height: 100px;
-    }
+.on-the-job-training {
+  background-color: blue;
+  margin: 25% auto;
+  display: flex;
+  justify-content: space-between;
+
+  img {
+    scale: both;
+    width: 35%;
+    margin: 5% auto -3% 8%;
+  }
+  .training-cta {
+    display: inline-block;
+    max-width: 50%;
+    margin: 10% auto;
+  }
 }
